add refresh button for render

--- a/samples/ar-model-viewer/src/main/res/values/strings.xml
+++ b/samples/ar-model-viewer/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="the_platypus_is_a_duck_billed_beaver_tailed_otter_footed_egg_laying_aquatic_creature_native_to_australia">The platypus is a duck-billed, beaver-tailed, otter-footed, egg-laying aquatic creature native to Australia</string>
     <string name="the_digestive_system_breaks_down_food_and_absorbs_nutrients_for_energy_and_growth">The digestive system breaks down food and absorbs nutrients for energy and growth.</string>
     <string name="the_heart_is_a_muscle_that_pumps_blood_to_all_parts_of_your_body_the_blood_pumped_by_your_heart_provides_your_body_with_the_oxygen_and_nutrients_it_needs_to_function">The Heart is a muscle that pumps blood to all parts of your body. The blood pumped by your heart provides your body with the oxygen and nutrients it needs to function.</string>
+    <string name="refresh" />
 </resources>
