--- a/samples/ar-model-viewer/src/main/res/values/strings.xml
+++ b/samples/ar-model-viewer/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="refresh" />
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="reading">Reading. . .</string>
+    <!-- ... other string resources ... -->
+    <string name="status_ready">Ready</string>
 </resources>
