--- a/samples/ar-model-viewer/src/main/res/values/strings.xml
+++ b/samples/ar-model-viewer/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="reading">Reading. . .</string>
     <!-- ... other string resources ... -->
     <string name="status_ready">Ready</string>
+    <string name="capture">Capture</string>
+    <string name="imagepreview">ImagePreview</string>
 </resources>
